Renomme le bouton enregistrer de description du service

--- a/src/vues/fragments/formulaireInformationsGenerales.pug
+++ b/src/vues/fragments/formulaireInformationsGenerales.pug
@@ -93,7 +93,7 @@ mixin formulaireInformationsGenerales(idHomologation)
       })
 
     if idHomologation
-      .bouton#diagnostic(identifiant = idHomologation) Enregistrer &nbsp;&nbsp;›
+      .bouton#diagnostic(identifiant = idHomologation) Valider
     else
       .bouton#diagnostic Continuer &nbsp;&nbsp;›
 
